--- a/src/style.css
+++ b/src/style.css
@@ -76,7 +76,7 @@ form {
 }
 
 .todo-item > input:checked ~ span {
-  text-decoration: line-through solid;
+  text-decoration: line-through;
   color: #ABABAB;
 }
 
