--- a/src/style.css
+++ b/src/style.css
@@ -64,7 +64,7 @@ form {
   border-radius: 3px;
   display: inline-block;
   height: 15px;
-  width: 15px;  
+  min-width: 15px;  
 }
 
 .todo-item > input:checked + label::after {
