--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -122,13 +122,22 @@ form {
 .cta {
   align-self: center;
   position: absolute;
-  display: none;
+  /* display: none; */
   color: #5C5C5C;
 }
 .cta:hover {
   color: #2F2F2F;
 }
-.todo-item:hover > .cta {
+.todo-item > .todo-controls {
+  display: none;
+  min-width: 20%;
+  position: absolute;
+  right: 0;
+  top: .3rem;
+  bottom: 0;
+  background: #fff;
+}
+.todo-item:hover > .todo-controls {
   display: block;
 }
 .edit {
