--- a/src/renderer/styles/todo-panels.css
+++ b/src/renderer/styles/todo-panels.css
@@ -2,11 +2,12 @@
   text-align: center;
   font-family: Helvetica;
   padding: .5rem;
-  width: 370px;
+  width: 93%;
   margin: 0 auto;
   background: #fff;
   position: fixed;
   bottom: 0;
+  transition: all .3s;
 }
 .todo-panels > a {
   text-decoration: none;
