--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -3,6 +3,8 @@
 @import './styles/todo-item.css';
 @import './styles/todo-panels.css';
 @import './styles/prompt.css';
+@import './styles/todo-container.css';
+@import './styles/control-bar.css';
 
 body {
   background: rgba(0, 0, 0, .4);
@@ -17,85 +19,3 @@ body {
   margin-bottom: 2.5rem;
 }
 
-.control-bar {
-  background: #fff;
-  padding: .5rem;
-  min-height: 24px;
-  position: fixed;
-  width: 96%;
-  top: 0;
-  left: 0;
-}
-.control-bar > a {
-  color: #333;
-  float: right;
-  position: absolute;
-  right: .5rem;
-}
-
-.todo-container {
-  background: #fff;
-  padding: .5rem;
-  padding-top: 2.5rem;
-  transition: all .3s;
-  min-height: 88%;
-}
-.todo-container .todo-list-title {
-  font-family: Helvetica;
-  margin-top: 0;
-  transition: all .3s;
-}
-
-.todo-container:not(.avatar) .todo-list-title {
-  display: none;
-}
-
-
-.todo-container.preview {
-  animation-duration: .3s;
-  animation-name: shrink;
-}
-.todo-container.restore {
-  animation-duration: .3s;
-  animation-name: grow;
-}
-.todo-container.avatar {
-  transform: scale(.5);
-  user-select: none;
-  pointer-events: none;
-}
-.current-list {
-  font-family: Helvetica;
-  font-weight: bold;
-}
-
-.todo-container.avatar .todo-list-title,
-.todo-container.preview .todo-list-title {
-  margin-left: 2rem;
-  font-size: 3rem;
-}
-
-.todo-container.avatar form,
-.todo-container.avatar .todo-panels,
-.todo-container.preview form,
-.todo-container.preview .todo-panels {
-  display: none;
-}
-
-@keyframes shrink {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(.5);
-  }
-}
-
-@keyframes grow {
-  from {
-    transform: scale(.5);
-  }
-  to {
-    transform: scale(1);
-  }
-}
